--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.3)
 project(sph_particle)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+add_compile_options(-std=c++11)
 
 include_directories("/usr/include")
 find_library(OIIO "OpenImageIO" "/usr/lib")
