--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(sph_particle)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 add_compile_options(-std=c++11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 
 include_directories("/usr/include")
 find_library(OIIO "OpenImageIO" "/usr/lib")
